--- a/checkbox.html
+++ b/checkbox.html
@@ -4,7 +4,7 @@
 	<div class="col-sm-10">
 		<div class="checkbox">
 			<label>
-				<input type="checkbox" id="{{ property.name }}" name="{{ property.name }}"{% if bean[property.name] %} checked{% endif %}>
+				<input type="checkbox" id="{{ property.name }}" name="{{ property.name }}"{% if bean[property.name] %} checked{% endif %}{% if property.required %} required="required"{% endif %}>
 			</label>
 		</div>
 	</div>
